--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="images/NFL.ico">
     <link rel="stylesheet" href="memo.css" />
     
-    <meta http-equiv="refresh" content="3camposguillermo@hotmail.com000">   <!-- TIMER DEBE de ser 30 -->
+    <meta http-equiv="refresh" content="30">   <!-- TIMER DEBE de ser 30 -->
   </head>
 
   <body onload="set_values()">
