updates de Andrés

--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
             
             console.log("Is game day:" + IsGameDay());
             if (IsGameDay() == 'true')
-              Scores();
+              //Scores();
+              Standings();
             else 
               Standings();
             
