--- a/index.html
+++ b/index.html
@@ -166,8 +166,7 @@
             
             console.log("Is game day:" + IsGameDay());
             if (IsGameDay() == 'true')
-              //Scores();
-              Standings();
+              Scores();
             else 
               Standings();
             
