--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
             //Probabilities();
             
             console.log("Is game day:" + IsGameDay());
-            if (IsGameDay() == 'true') {
+            // if (IsGameDay() == 'true') {
+            if (Math.round(Math.random()) == 'true') {
               Scores();
-              Standings();
             }
             else 
               Standings();
