--- a/index.html
+++ b/index.html
@@ -165,8 +165,7 @@
             //Probabilities();
             
             console.log("Is game day:" + IsGameDay());
-            // if (IsGameDay() == 'true') {
-            if (Math.round(Math.random()) == 'true') {
+            if (IsGameDay() == 'true') {
               Scores();
             }
             else 
