--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
             console.log("Is game day:" + IsGameDay());
             if (IsGameDay() == 'true') {
               Scores();
+              Standings();
             }
             else 
               Standings();
