--- a/index.html
+++ b/index.html
@@ -169,9 +169,10 @@
               Scores();
               Standings();
             }
-            else 
+            else  {
+              Scores();
               Standings();
-            
+            }
         </script>
         
         <!-- -->
