Updated Andres lambda

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <script>
             
             console.log(getRefreshRate());
-            //Probabilities();
+            Probabilities();
             
             console.log("Is game day:" + IsGameDay());
             if (IsGameDay() == 'true') {
