CLICK TO TRIGGER WEBHOOK

--- a/index.html
+++ b/index.html
@@ -134,38 +134,38 @@
                 
 
               <table cellpadding="0" cellspacing="0" width="100%" border="0">
-                <tr><td class="textright">Arizona Cardinals</td><td><img src="images/logo/ARI.png" width='40px' height='40px' /></td><td style="width:80%"><input type="text" id="webhook_ARI" name="webhook_ARI" value=""></td></tr>
-                <tr><td class="textright">Atlanta Falcons</td><td><img src="images/logo/ATL.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_ATL" name="webhook_ATL" value=""></td></tr>
-                <tr><td class="textright">Baltimore Ravens</td><td><img src="images/logo/BAL.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_BAL" name="webhook_BAL" value=""></td></tr>
-                <tr><td class="textright">Buffalo Bills</td><td><img src="images/logo/BUF.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_BUF" name="webhook_BUF" value=""></td></tr>
-                <tr><td class="textright">Carolina Panthers</td><td><img src="images/logo/CAR.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_CAR" name="webhook_CAR" value=""></td></tr>
-                <tr><td class="textright">Chicago Bears</td><td><img src="images/logo/CHI.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_CHI" name="webhook_CHI" value=""></td></tr>
-                <tr><td class="textright">Cincinnati Bengals</td><td><img src="images/logo/CIN.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_CIN" name="webhook_CIN" value=""></td></tr>
-                <tr><td class="textright">Cleveland Browns</td><td><img src="images/logo/CLE.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_CLE" name="webhook_CLE" value=""></td></tr>
-                <tr><td class="textright">Dallas Cowboys</td><td><img src="images/logo/DAL.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_DAL" name="webhook_DAL" value=""></td></tr>
-                <tr><td class="textright">Denver Broncos</td><td><img src="images/logo/DEN.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_DEN" name="webhook_DEN" value=""></td></tr>
-                <tr><td class="textright">Detroit Lions</td><td><img src="images/logo/DET.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_DET" name="webhook_DET" value=""></td></tr>
-                <tr><td class="textright">Green Bay Packers</td><td><img src="images/logo/GB.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_GB" name="webhook_GB" value=""></td></tr>
-                <tr><td class="textright">Houston Texans</td><td><img src="images/logo/HOU.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_HOU" name="webhook_HOU" value=""></td></tr>
-                <tr><td class="textright">Indianapolis Colts</td><td><img src="images/logo/IND.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_IND" name="webhook_IND" value=""></td></tr>
-                <tr><td class="textright">Jacksonville Jaguars</td><td><img src="images/logo/JAX.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_JAX" name="webhook_JAX" value=""></td></tr>
-                <tr><td class="textright">Kansas City Chiefs</td><td><img src="images/logo/KC.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_KC" name="webhook_KC" value=""></td></tr>
-                <tr><td class="textright">Las Vegas Raiders</td><td><img src="images/logo/LV.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_LV" name="webhook_LV" value=""></td></tr>
-                <tr><td class="textright">Los Angeles Chargers</td><td><img src="images/logo/LAC.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_LAC" name="webhook_LAC" value=""></td></tr>
-                <tr><td class="textright">Los Angeles Rams</td><td><img src="images/logo/LA.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_LA" name="webhook_LA" value=""></td></tr>
-                <tr><td class="textright">Miami Dolphins</td><td><img src="images/logo/MIA.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_MIA" name="webhook_MIA" value=""></td></tr>
-                <tr><td class="textright">Minnesota Vikings</td><td><img src="images/logo/MIN.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_MIN" name="webhook_MIN" value=""></td></tr>
-                <tr><td class="textright">New England Patriots</td><td><img src="images/logo/NE.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_NE" name="webhook_NE" value=""></td></tr>
-                <tr><td class="textright">New Orleans Saints</td><td><img src="images/logo/NO.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_NO" name="webhook_NO" value=""></td></tr>
-                <tr><td class="textright">New York Giants</td><td><img src="images/logo/NYG.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_NYG" name="webhook_NYG" value=""></td></tr>
-                <tr><td class="textright">New York Jets</td><td><img src="images/logo/NYJ.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_NYJ" name="webhook_NYJ" value=""></td></tr>
-                <tr><td class="textright">Philadelphia Eagles</td><td><img src="images/logo/PHI.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_PHI" name="webhook_PHI" value=""></td></tr>
-                <tr><td class="textright">Pittsburgh Steelers</td><td><img src="images/logo/PIT.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_PIT" name="webhook_PIT" value=""></td></tr>
-                <tr><td class="textright">San Francisco 49ers</td><td><img src="images/logo/SF.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_SF" name="webhook_SF" value=""></td></tr>
-                <tr><td class="textright">Seattle Seahawks</td><td><img src="images/logo/SEA.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_SEA" name="webhook_SEA" value=""></td></tr>
-                <tr><td class="textright">Tampa Bay Buccaneers</td><td><img src="images/logo/TB.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_TB" name="webhook_TB" value=""></td></tr>
-                <tr><td class="textright">Tennessee Titans</td><td><img src="images/logo/TEN.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_TEN" name="webhook_TEN" value=""></td></tr>
-                <tr><td class="textright">Washington Commanders</td><td><img src="images/logo/WAS.png" width='40px' height='40px' /></td><td><input type="text" id="webhook_WAS" name="webhook_WAS" value=""></td></tr>              </table>
+                <tr><td class="textright">Arizona Cardinals</td><td><img src="images/logo/ARI.png" width='40px' height='40px' onclick="clickimage('webhook_ARI')" /></td><td style="width:80%"><input type="text" id="webhook_ARI" name="webhook_ARI" value=""></td></tr>
+                <tr><td class="textright">Atlanta Falcons</td><td><img src="images/logo/ATL.png" width='40px' height='40px'  onclick="clickimage('webhook_ATL')" /></td><td><input type="text" id="webhook_ATL" name="webhook_ATL" value=""></td></tr>
+                <tr><td class="textright">Baltimore Ravens</td><td><img src="images/logo/BAL.png" width='40px' height='40px'  onclick="clickimage('webhook_BAL')" /></td><td><input type="text" id="webhook_BAL" name="webhook_BAL" value=""></td></tr>
+                <tr><td class="textright">Buffalo Bills</td><td><img src="images/logo/BUF.png" width='40px' height='40px'  onclick="clickimage('webhook_BUF')" /></td><td><input type="text" id="webhook_BUF" name="webhook_BUF" value=""></td></tr>
+                <tr><td class="textright">Carolina Panthers</td><td><img src="images/logo/CAR.png" width='40px' height='40px'  onclick="clickimage('webhook_CAR')" /></td><td><input type="text" id="webhook_CAR" name="webhook_CAR" value=""></td></tr>
+                <tr><td class="textright">Chicago Bears</td><td><img src="images/logo/CHI.png" width='40px' height='40px'  onclick="clickimage('webhook_CHI')" /></td><td><input type="text" id="webhook_CHI" name="webhook_CHI" value=""></td></tr>
+                <tr><td class="textright">Cincinnati Bengals</td><td><img src="images/logo/CIN.png" width='40px' height='40px'  onclick="clickimage('webhook_CIN')" /></td><td><input type="text" id="webhook_CIN" name="webhook_CIN" value=""></td></tr>
+                <tr><td class="textright">Cleveland Browns</td><td><img src="images/logo/CLE.png" width='40px' height='40px'  onclick="clickimage('webhook_CLE')" /></td><td><input type="text" id="webhook_CLE" name="webhook_CLE" value=""></td></tr>
+                <tr><td class="textright">Dallas Cowboys</td><td><img src="images/logo/DAL.png" width='40px' height='40px'  onclick="clickimage('webhook_DAL')" /></td><td><input type="text" id="webhook_DAL" name="webhook_DAL" value=""></td></tr>
+                <tr><td class="textright">Denver Broncos</td><td><img src="images/logo/DEN.png" width='40px' height='40px'  onclick="clickimage('webhook_DEN')" /></td><td><input type="text" id="webhook_DEN" name="webhook_DEN" value=""></td></tr>
+                <tr><td class="textright">Detroit Lions</td><td><img src="images/logo/DET.png" width='40px' height='40px'  onclick="clickimage('webhook_DET')" /></td><td><input type="text" id="webhook_DET" name="webhook_DET" value=""></td></tr>
+                <tr><td class="textright">Green Bay Packers</td><td><img src="images/logo/GB.png" width='40px' height='40px'  onclick="clickimage('webhook_GB')" /></td><td><input type="text" id="webhook_GB" name="webhook_GB" value=""></td></tr>
+                <tr><td class="textright">Houston Texans</td><td><img src="images/logo/HOU.png" width='40px' height='40px'  onclick="clickimage('webhook_HOU')"  /></td><td><input type="text" id="webhook_HOU" name="webhook_HOU" value=""></td></tr>
+                <tr><td class="textright">Indianapolis Colts</td><td><img src="images/logo/IND.png" width='40px' height='40px'  onclick="clickimage('webhook_IND')" /></td><td><input type="text" id="webhook_IND" name="webhook_IND" value=""></td></tr>
+                <tr><td class="textright">Jacksonville Jaguars</td><td><img src="images/logo/JAX.png" width='40px' height='40px'  onclick="clickimage('webhook_JAX')" /></td><td><input type="text" id="webhook_JAX" name="webhook_JAX" value=""></td></tr>
+                <tr><td class="textright">Kansas City Chiefs</td><td><img src="images/logo/KC.png" width='40px' height='40px'  onclick="clickimage('webhook_KC')" /></td><td><input type="text" id="webhook_KC" name="webhook_KC" value=""></td></tr>
+                <tr><td class="textright">Las Vegas Raiders</td><td><img src="images/logo/LV.png" width='40px' height='40px'  onclick="clickimage('webhook_LV')" /></td><td><input type="text" id="webhook_LV" name="webhook_LV" value=""></td></tr>
+                <tr><td class="textright">Los Angeles Chargers</td><td><img src="images/logo/LAC.png" width='40px' height='40px'  onclick="clickimage('webhook_LAC')" /></td><td><input type="text" id="webhook_LAC" name="webhook_LAC" value=""></td></tr>
+                <tr><td class="textright">Los Angeles Rams</td><td><img src="images/logo/LA.png" width='40px' height='40px'  onclick="clickimage('webhook_LA')"  /></td><td><input type="text" id="webhook_LA" name="webhook_LA" value=""></td></tr>
+                <tr><td class="textright">Miami Dolphins</td><td><img src="images/logo/MIA.png" width='40px' height='40px'  onclick="clickimage('webhook_MIA')" /></td><td><input type="text" id="webhook_MIA" name="webhook_MIA" value=""></td></tr>
+                <tr><td class="textright">Minnesota Vikings</td><td><img src="images/logo/MIN.png" width='40px' height='40px' onclick="clickimage('webhook_MIN')"  /></td><td><input type="text" id="webhook_MIN" name="webhook_MIN" value=""></td></tr>
+                <tr><td class="textright">New England Patriots</td><td><img src="images/logo/NE.png" width='40px' height='40px'  onclick="clickimage('webhook_NE')" /></td><td><input type="text" id="webhook_NE" name="webhook_NE" value=""></td></tr>
+                <tr><td class="textright">New Orleans Saints</td><td><img src="images/logo/NO.png" width='40px' height='40px'  onclick="clickimage('webhook_NO')" /></td><td><input type="text" id="webhook_NO" name="webhook_NO" value=""></td></tr>
+                <tr><td class="textright">New York Giants</td><td><img src="images/logo/NYG.png" width='40px' height='40px'  onclick="clickimage('webhook_NYG')" /></td><td><input type="text" id="webhook_NYG" name="webhook_NYG" value=""></td></tr>
+                <tr><td class="textright">New York Jets</td><td><img src="images/logo/NYJ.png" width='40px' height='40px'  onclick="clickimage('webhook_NYJ')" /></td><td><input type="text" id="webhook_NYJ" name="webhook_NYJ" value=""></td></tr>
+                <tr><td class="textright">Philadelphia Eagles</td><td><img src="images/logo/PHI.png" width='40px' height='40px'  onclick="clickimage('webhook_PHI')" /></td><td><input type="text" id="webhook_PHI" name="webhook_PHI" value=""></td></tr>
+                <tr><td class="textright">Pittsburgh Steelers</td><td><img src="images/logo/PIT.png" width='40px' height='40px'  onclick="clickimage('webhook_PIT')" /></td><td><input type="text" id="webhook_PIT" name="webhook_PIT" value=""></td></tr>
+                <tr><td class="textright">San Francisco 49ers</td><td><img src="images/logo/SF.png" width='40px' height='40px' onclick="clickimage('webhook_SF')" /></td><td><input type="text" id="webhook_SF" name="webhook_SF" value=""></td></tr>
+                <tr><td class="textright">Seattle Seahawks</td><td><img src="images/logo/SEA.png" width='40px' height='40px'  onclick="clickimage('webhook_SEA')" /></td><td><input type="text" id="webhook_SEA" name="webhook_SEA" value=""></td></tr>
+                <tr><td class="textright">Tampa Bay Buccaneers</td><td><img src="images/logo/TB.png" width='40px' height='40px'  onclick="clickimage('webhook_TB')" /></td><td><input type="text" id="webhook_TB" name="webhook_TB" value=""></td></tr>
+                <tr><td class="textright">Tennessee Titans</td><td><img src="images/logo/TEN.png" width='40px' height='40px' onclick="clickimage('webhook_TEN')"  /></td><td><input type="text" id="webhook_TEN" name="webhook_TEN" value=""></td></tr>
+                <tr><td class="textright">Washington Commanders</td><td><img src="images/logo/WAS.png" width='40px' height='40px' onclick="clickimage('webhook_WAS')"  /></td><td><input type="text" id="webhook_WAS" name="webhook_WAS" value=""></td></tr>              </table>
             </div>
           <br>
           <input type="submit" value="Save" class="submit">
@@ -187,6 +187,7 @@
             console.log(getRefreshRate());
             //Probabilities();
             
+            clickimage('webhook_BAL');
             console.log("Is game day:" + IsGameDay());
             if (IsGameDay() == 'true') {
               //Scores();
