--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
                   </td>
 
                   <td>
+                    <input type="radio" id="#013369" name="background_color" value="#013369">
+                    <label for="blue"><div class='box blue'></div></label>
+                  </td>
+
+                  <td>
                     <input type="radio" id="white" name="background_color" value="white">
                     <label for="white"><div class='box white'></div></label>
                   </td>
@@ -187,7 +192,7 @@
             console.log(getRefreshRate());
             //Probabilities();
             
-            clickimage('webhook_BAL');
+           
             console.log("Is game day:" + IsGameDay());
             if (IsGameDay() == 'true') {
               //Scores();
