--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
 
                 </td>
                 <td>
+                  <input type="radio" id="hi-res" name="theme" value="hi-res" checked required>
+                  <label for="hi-res"><br> <img src="images/hi-res/PIT.png" width="120px" height="120px" /></label>
+
+                </td>
+                <td>
                   <input type="radio" id="logo_name" name="theme" value="logo_name">
                   <label for="logo_name"><br><img src="images/logo_name/PIT.png" width="100px" height="100px"/></label>
 
@@ -93,6 +98,14 @@
                   <label for="helmet"><br><img src="images/helmet/PIT.png" width="100px" height="100px"/></label>
 
                 </td>
+
+                <td>
+                  <input type="radio" id="name" name="theme" value="name">
+                  <label for="name"><br><img src="images/names/PIT.png" width="240px" height="100px"/></label>
+
+                </td>
+
+
               </tr>  
               </tbody>
                 </table>
