--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
            
             console.log("Is game day:" + IsGameDay());
             if (IsGameDay() == 'true') {
-              //Scores();
+              Scores();
             }
             else  {
-              //Standings();
+              Standings();
             }
         </script>
         
