--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             console.log(getRefreshRate());
             //Probabilities();
             
-           
+           Scores();
             console.log("Is game day:" + IsGameDay());
             if (IsGameDay() == 'true') {
               Scores();
