fixed issue with image

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                 </td>
 
                 <td>
-                  <input type="radio" id="name" name="theme" value="name">
-                  <label for="name"><br><img src="images/names/PIT.png" width="240px" height="100px"/></label>
+                  <input type="radio" id="names" name="theme" value="names">
+                  <label for="names"><br><img src="images/names/PIT.png" width="240px" height="100px"/></label>
                 </td>
               </tr>  
               </tbody>
