--- a/index.html
+++ b/index.html
@@ -179,8 +179,11 @@
                 <tr><td class="textright">Seattle Seahawks</td><td><img src="images/logo/SEA.png" width='40px' height='40px'  onclick="clickimage('webhook_SEA')" /></td><td><input type="text" id="webhook_SEA" name="webhook_SEA" value=""></td></tr>
                 <tr><td class="textright">Tampa Bay Buccaneers</td><td><img src="images/logo/TB.png" width='40px' height='40px'  onclick="clickimage('webhook_TB')" /></td><td><input type="text" id="webhook_TB" name="webhook_TB" value=""></td></tr>
                 <tr><td class="textright">Tennessee Titans</td><td><img src="images/logo/TEN.png" width='40px' height='40px' onclick="clickimage('webhook_TEN')"  /></td><td><input type="text" id="webhook_TEN" name="webhook_TEN" value=""></td></tr>
-                <tr><td class="textright">Washington Commanders</td><td><img src="images/logo/WAS.png" width='40px' height='40px' onclick="clickimage('webhook_WAS')"  /></td><td><input type="text" id="webhook_WAS" name="webhook_WAS" value=""></td></tr>              </table>
-            </div>
+                <tr><td class="textright">Washington Commanders</td><td><img src="images/logo/WAS.png" width='40px' height='40px' onclick="clickimage('webhook_WAS')"  /></td><td><input type="text" id="webhook_WAS" name="webhook_WAS" value=""></td></tr>             
+                <tr><td class="textright">None</td><td><img src="images/off.png" width='40px' height='20px' onclick="clickimage('webhook_OFF')"  /></td><td><input type="text" id="webhook_OFF" name="webhook_WAS" value=""></td></tr>              
+              </table>
+  
+              </div>
           <br>
           <input type="submit" value="Save" class="submit">
         </form>
