--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@
 
                 </td>
                 <td>
+                  <input type="radio" id="B&W" name="theme" value="B&W" checked required>
+                  <label for="B&W"><br> <img src="images/B&W/PIT.png" width="120px" height="120px" /></label>
+
+                </td>
+
+
+
+                <td>
                   <input type="radio" id="logo_name" name="theme" value="logo_name">
                   <label for="logo_name"><br><img src="images/logo_name/PIT.png" width="100px" height="100px"/></label>
 
@@ -129,6 +137,11 @@
                   <td>
                     <input type="radio" id="white" name="background_color" value="white">
                     <label for="white"><div class='box white'></div></label>
+                  </td>
+
+                  <td>
+                    <input type="radio" id="image" name="background_color" value="image">
+                    <label for="image"><div class='box image'></div></label>
                   </td>
 
                 </tr>
@@ -193,7 +206,7 @@
 
 
     <!-- scrolling -->
-    <div class="path">
+    <div class="path" id="path">
       <div class="scores" >
         <h2 id="myH2"></h2>
 
