--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
                   <td>
                     <input type="radio" id="image" name="background_color" value="image">
-                    <label for="image"><div class='box image'></div></label>
+                    <label for="image"><div class='box green'></div></label>
                   </td>
 
                 </tr>
