--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 
                 </td>
                 <td>
-                  <input type="radio" id="hi-res-with-background" name="theme" value="hi-res-with-background" checked required>
-                  <label for="hi-res-with-background"><br> <img src="images/hi-res-with-background/PIT.png" width="120px" height="120px" /></label>
+                  <input type="radio" id="logo-with-background" name="theme" value="logo-with-background" checked required>
+                  <label for="logo-with-background"><br> <img src="images/logo-with-background/PIT.png" width="120px" height="120px" /></label>
 
                 </td>
                 <td>
