--- a/index.html
+++ b/index.html
@@ -74,22 +74,22 @@
 
           <h3>Themes</h3> 
           <div id="rcorners1" class="center"  >
-              <table>
+              <table style="text-align: center">
                 <tbody>
                 <tr>
                 <td>
                   <input type="radio" id="logo" name="theme" value="logo" checked required>
-                  <label for="logo"><br> <img src="images/logo/PIT.png" width="100px" height="100px" /></label>
+                  <label for="logo"><br><img src="images/logo/MIA.png" width="120px" height="120px" /><br>Logo<br>&nbsp;</label>
 
                 </td>
                 <td>
                   <input type="radio" id="logo-with-background" name="theme" value="logo-with-background" checked required>
-                  <label for="logo-with-background"><br> <img src="images/logo-with-background/PIT.png" width="120px" height="120px" /></label>
+                  <label for="logo-with-background"><br> <img src="images/logo-with-background/BUF.png" width="120px" height="120px" /><br>Logo with<br>Background</label>
 
                 </td>
                 <td>
                   <input type="radio" id="B&W" name="theme" value="B&W" checked required>
-                  <label for="B&W"><br> <img src="images/B&W/PIT.png" width="120px" height="120px" /></label>
+                  <label for="B&W"><br> <img src="images/B&W/MIN.png" width="120px" height="120px" /><br>Black & White<br>&nbsp;</label>
 
                 </td>
 
@@ -97,18 +97,18 @@
 
                 <td>
                   <input type="radio" id="logo_name" name="theme" value="logo_name">
-                  <label for="logo_name"><br><img src="images/logo_name/PIT.png" width="100px" height="100px"/></label>
+                  <label for="logo_name"><br><img src="images/logo_name/GB.png" width="120px" height="120px"/><br>Logo with<br>team name</label>
 
                 </td>
                 
                 <td>
                   <input type="radio" id="helmet" name="theme" value="helmet">
-                  <label for="helmet"><br><img src="images/helmet/PIT.png" width="100px" height="100px"/></label>
+                  <label for="helmet"><br><img src="images/helmet/PIT.png" width="120px" height="120px"/><br>Helmet<br>&nbsp;</label>
                 </td>
 
                 <td>
                   <input type="radio" id="names" name="theme" value="names">
-                  <label for="names"><br><img src="images/names/PIT.png" width="240px" height="100px"/></label>
+                  <label for="names"><br><img src="images/names/KC.png" width="240px" height="120px"/><br>Team Name<br>&nbsp;</label>
                 </td>
               </tr>  
               </tbody>
