--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
                 <tr>
                 <td>
                   <input type="radio" id="logo" name="theme" value="logo" checked required>
-                  <label for="logo"><br><img src="images/logo/MIA.png" width="100px" height="100px" /><br>Logo<br>&nbsp;</label>
+                  <label for="logo"><br><img src="images/logo/BUF.png" width="100px" height="100px" /><br>Logo<br>&nbsp;</label>
 
                 </td>
                 <td>
                   <input type="radio" id="logo-with-background" name="theme" value="logo-with-background" checked required>
-                  <label for="logo-with-background"><br> <img src="images/logo-with-background/BUF.png" width="100px" height="100px" /><br>Logo with<br>Background</label>
+                  <label for="logo-with-background"><br> <img src="images/logo-with-background/LAC.png" width="100px" height="100px" /><br>Logo with<br>Background</label>
 
                 </td>
                 <td>
