--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             
 
             <div class="score"><img src="images/NFL.png" class="responsive" /></div>
-            <div class="score">Live Game Scores 🏈</div>
+            <div class="score">Live Scores 🏈</div>
           </div>
         </p>
 
