--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
             <h3>NFL Song</h3> 
             <div id="rcorners1" class="center" >
-              <audio id="myAudio" controls autoplay>
+              <audio id="myAudio" controls>
                 <source src="static/nfl.ogg" type="audio/ogg">
                 <source src="static/nfl.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
