--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Live Game Scores 🏈</title>
-    <link rel="icon" type="image/x-icon" href="images/NFL.ico">
+    <link rel="icon" type="image/x-icon" href="images/page.ico">
     <link rel="stylesheet" href="static/memo.css" />
     <link rel="stylesheet" href="static/animate.min.css"/>
   </head>
