--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script type="text/javascript" src="static/scripts.js"></script>
+    <script type="text/javascript" src="/static/scripts.js"></script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Live Game Scores 🏈</title>
-    <link rel="icon" type="image/x-icon" href="images/page.ico?">
-    <link rel="stylesheet" href="static/memo.css" />
-    <link rel="stylesheet" href="static/animate.min.css"/>
+    <link rel="icon" type="image/x-icon" href="/images/page.ico?">
+    <link rel="stylesheet" href="/static/memo.css" />
+    <link rel="stylesheet" href="/static/animate.min.css"/>
   </head>
 
   <body onload="set_values()">
 
-  <!-- SETTINGS -->
+  <!-- SETTINGS Screen-->
     <button type="button" class="collapsible" style="border-style: none;background-color: #013369" ><img src="images/settings7.png" width="30px" style="padding-right: 6px;"></button>
       <div class="content">
         <h1>Settings</h1>
@@ -59,8 +59,6 @@
                 <option value="15000">Every 15 seconds</option>
               </select>
           </div>
-
-
 
         <h3>Win‑Loss Record and Probabilities</h3> 
         <div id="rcorners1" class="center"  >
