--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script type="text/javascript" src="/static/scripts.js"></script>
+    <script type="text/javascript" src="static/scripts.js"></script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Live Game Scores 🏈</title>
-    <link rel="icon" type="image/x-icon" href="/images/page.ico?">
-    <link rel="stylesheet" href="/static/memo.css" />
-    <link rel="stylesheet" href="/static/animate.min.css"/>
+    <link rel="icon" type="image/x-icon" href="images/page.ico?">
+    <link rel="stylesheet" href="static/memo.css" />
+    <link rel="stylesheet" href="static/animate.min.css"/>
   </head>
 
   <body onload="set_values()">
